--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,8 +3,18 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
-  <br />
-
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <br>
+  <%= f.label :song_notes %>
+  <br>
+  <input name="song[song_notes][]" id="song_notes_1">
+  <br>
+  <input name="song[song_notes][]" id="song_notes_2">
+  <br>
+  <input name="song[song_notes][]" id="song_notes_3">
+  <br>
   <%= f.submit %>
 <% end %>
 
