--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,7 +5,26 @@
   <%= f.text_field :title %>
   <br />
 
-  <%= f.submit %>
+  <%= f.label :artist_name %> 
+  <%=f.text_field :artist_name, list:'artists_autocomplete'%> 
+    <datalist id='artists_autocomplete'>
+      <%Artist.all.each do |artist|%>
+        <option value = <%=artist.name%>>
+      <%end%> 
+    </datalist> 
+  <br />
+
+  <%= f.label :genre %> 
+  <%=f.collection_select :genre_id, Genre.all, :id, :name%> 
+  <br />
+
+  <%= f.label :notes %> 
+  <input name="song[notes][]" id="song_notes_1">
+  <input name="song[notes][]"id="song_notes_2">
+  <input name="song[notes][]" id="song_notes_3">
+
+
+  <%= f.submit %> 
 <% end %>
 
 
