--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,6 +5,15 @@
   <%= f.text_field :title %>
   <br />
 
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <br />
+  
+  <%= f.label :genre%>
+  <%= f.collection_select :genre_id, @genres.all, :id, :name%>
+
+  <input type = "text" id = "song_notes_1" name = "song[notes][]">
+  <input type = "text" id = "song_notes_2" name = "song[notes][]">
   <%= f.submit %>
 <% end %>
 
