--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,7 +4,13 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
-
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <br>
+  <%= f.collection_select :genre_id, @genres, :id, :name %>
+  <textarea name="song[note_contents][]" id="song_notes_1"></textarea>
+  <textarea name="song[note_contents][]" id="song_notes_2"></textarea>
+  <textarea name="song[note_contents][]" id="song_notes_3"></textarea>
   <%= f.submit %>
 <% end %>
 
