--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,6 +3,13 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <input type="text" id="song_notes_1" name="song[notes][]">
+  <input type="text" id="song_notes_2" name="song[notes][]">
+  <input type="text" id="song_notes_3" name="song[notes][]">
+  <input type="submit" value="Submit">
   <br />
 
   <%= f.submit %>
