--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -2,8 +2,13 @@
 
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br />
+  <%= f.text_field :title %> <br />
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %> <br />
+  <%=f.collection_select :genre_id, Genre.all, :id, :name%><br />
+  
+  <input name="song[notes][]" id= "song_notes_1" type = "text"><br />
+  <input name="song[notes][]" id= "song_notes_2" type = "text"><br />
 
   <%= f.submit %>
 <% end %>
