--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,7 +3,13 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
+  <%= f.label :artist_name%>
+  <%= f.text_field :artist_name%>
+  <%= f.collection_select :genre_id, @genres, :id, :name%>
   <br />
+  <label>Notes:</label>
+  <input type="text" id="song_notes_1" name="notes[]">
+  <input type="text" id="song_notes_2" name="notes[]">
 
   <%= f.submit %>
 <% end %>
