--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,9 +1,20 @@
 <h1>Create a Song</h1>
 
 <%= form_for @song  do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br />
+  <%= f.label :title %>:
+  <%= f.text_field :title %><br />
+
+  <%= f.label :artist_name %>:
+  <%= f.text_field :artist_name %><br />
+
+  <%= f.label :genre_name %>:
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
+
+  <label>Note 1:</label>
+  <input type="text" id="song_notes_1" name="song_notes[]"><br>
+
+  <label>Note 2:</label>
+  <input type="text" id="song_notes_2" name="song_notes[]"><br>
 
   <%= f.submit %>
 <% end %>
