--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,9 +1,19 @@
 <h1>Create a Song</h1>
 
-<%= form_for @song  do |f| %>
+<%= form_for @song do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <br />
+  <%= f.label :genre %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <br />
+  <label for="song_notes_1">Notes 1:</label>
+  <input name="song[note_contents][]" id="song_notes_1"><br>
+  <label for="song_notes_2">Notes 2:</label>
+  <input name="song[note_contents][]" id="song_notes_2"><br>
 
   <%= f.submit %>
 <% end %>
