--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,7 +3,15 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
-  <br />
+
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  
+  <%= f.collection_select(:genre_id, @genres, :id, :name)%><br>
+
+  <input id="song_notes_1" type="text" name="song[note_contents][]">
+  <input id="song_notes_2" type="text" name="song[note_contents][]">
+  <input id="song_notes_3" type="text" name="song[note_contents][]">
 
   <%= f.submit %>
 <% end %>
